--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -21,13 +21,15 @@ jobs:
           aws-region: us-west-1
 
       - name: Set up SAM CLI
-        run: |
-          curl -Lo sam-installation-script.sh https://raw.githubusercontent.com/aws/aws-sam-cli/v2.0.0/aws-sam-cli-installer-linux-x86_64.sh
-          chmod +x sam-installation-script.sh
-          sudo ./sam-installation-script.sh
+      uses: aws-actions/aws-sam-cli-action@v1
+      with:
+        version: 'latest'
+
 
       - name: Build SAM application
         run: sam build
 
       - name: Deploy SAM application
         run: sam deploy --no-confirm-changeset --stack-name my-stack --capabilities CAPABILITY_IAM
+
+
