--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -21,7 +21,7 @@ jobs:
           aws-region: us-west-1
 
       - name: Build SAM application
-        run: sam build
+        run: sam build -t eksamen_2024_27/template.yaml
 
       - name: Deploy SAM application
         run: sam deploy --no-confirm-changeset --stack-name my-stack --capabilities CAPABILITY_IAM
