trying to install python5

--- a/eksamen_2024_27/template.yaml
+++ b/eksamen_2024_27/template.yaml
@@ -35,7 +35,13 @@ Resources:
           Type: Api
           Properties:
             Path: /generate-image  
-            Method: post   
+            Method: post
+            RestApiId:
+              Ref: ServerlessRestApi
+            StageName: Prod
+            EndpointConfiguration:
+              Types:
+                - REGIONAL
 
 Outputs:
   ImageGenerationApi:
