--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -29,4 +29,4 @@ jobs:
         run: sam build -t eksamen_2024_27/template.yaml
 
       - name: Deploy SAM application
-        run: sam deploy --no-confirm-changeset --stack-name my-stack --capabilities CAPABILITY_IAM --s3-bucket pgr301-couch-explorers
+        run: sam deploy --no-confirm-changeset --stack-name sam-demo-27 --capabilities CAPABILITY_IAM --s3-bucket pgr301-couch-explorers
