--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -27,6 +27,6 @@ jobs:
 
       - name: Build SAM application
         run: sam build -t eksamen_2024_27/template.yaml
-
+        #comment
       - name: Deploy SAM application
         run: sam deploy --no-confirm-changeset --stack-name sam-demo-27 --capabilities CAPABILITY_IAM --s3-bucket pgr301-couch-explorers
