--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -3,7 +3,7 @@ name: Terraform Deploy
 on:
   push:
     branches:
-      - main
+      - master
       - '**' # Alle andre brancher
 
 permissions:
@@ -36,13 +36,13 @@ jobs:
 
       # Initialiserer Terraform
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -chdir=eksamen-2024/infra
 
       # Bruker forskjellig oppførsel avhengig av hvilken branch som trigget workflowen
       - name: Terraform Plan/Apply
         run: |
           if [[ "${{ github.ref_name }}" == "main" ]]; then
-            terraform apply -auto-approve
+            terraform apply -chdir=eksamen-2024/infra -auto-approve
           else
-            terraform plan
+            terraform plan -chdir=eksamen-2024/infra
           fi
