added | to tf init

--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Initialiserer Terraform
       - name: Terraform Init
-        run: 
+        run: |
           cd eksamen-2024/infra 
           terraform init
 
