--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Terraform Init
         run: |
           cd eksamen-2024/infra 
-          terraform init -migrate-state
+          terraform init -reconfigure
 
       # Bruker forskjellig oppførsel avhengig av hvilken branch som trigget workflowen
       - name: Terraform Plan/Apply
