--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Terraform Plan/Apply
         run: |
           cd eksamen-2024/infra
-          if [[ "${{ github.ref_name }}" == "main" ]]; then
+          if [[ "${{ github.ref_name }}" == "master" ]]; then
             terraform apply -auto-approve
           else
             terraform plan
